# headset-fixer

./: .gitignore  Makefile  README.txt  go.mod  main.go  meson.build
cmd/scripty/: main.go
internal/config/: config.go
internal/executor/: executor.go
internal/installer/: installer.go
internal/openrouter/: openrouter.go
internal/tui/: tui.go
scripts/scripts/: fix-android-path.sh
